--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -27,6 +27,10 @@
         border-bottom: 1px solid #64b5f6;
         box-shadow: 0 1px 0 0  #64b5f6;
     }
+    .input-field input[type=password]:focus {
+        border-bottom: 1px solid #64b5f6;
+        box-shadow: 0 1px 0 0  #64b5f6;
+    }
     h6 {
         margin: 30px;
     }
