test app until now

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -72,7 +72,7 @@
         max-width: 500px;
         height: max-content;
         margin: 26px auto;
-        i {
+        .heart-icon {
             color : #ef5350 !important;
         }
     }
