--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -41,21 +41,28 @@
         max-width: 550px;
         margin: 0px auto;
     }
-    .profile-head {
-        img {
+    .profile-head{
+        img{
             width: 160px;
             height: 160px;
             border-radius: 80px;
         }
         display: flex;
         justify-content: space-around;
-        margin: 18px 0px;
+        margin: 30px 0px;
+        padding: 30px 0px;
         border-bottom: 1px solid grey;
     }
-    .profile-info {
+    .profile-info{
         display: flex;
         justify-content: space-between;
         width: 108%;
+        h5{
+            font-size: 1.5em;
+            span{
+                font-weight: 500;
+            }
+        }
     }
     .profile-gallery {
         display: flex;
@@ -68,6 +75,29 @@
 }
 
 .home {
+    .main-head{
+        padding: 17px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .profile-link{
+            display: flex;
+            align-items: center;
+            h5{
+                margin: 0;
+                margin-left: 10px;
+                font-size: 1.2em;
+            }
+        }
+        a{
+            color: black;
+        }
+    }
+    .side-image{
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+    }
     .card {
         max-width: 500px;
         height: max-content;
