--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -13,7 +13,7 @@
     }
 }
 
-.login-form, .signup-form, .create-post-form, .reset-password-form, .new-password-form {
+@mixin form-styles {
     h2 {
         font-family: 'Grand Hotel', cursive;
     }
@@ -34,18 +34,30 @@
     h6 {
         margin: 30px;
     }
-}
+  }
 
-.login-form, .signup-form, .new-password-form{
-    .password-field{
-            position: relative;
-        span{
-            position: absolute;
-            top: 15px;
-            right: 5px;
-            cursor: pointer;
+.form-main-container{
+    display: flex;
+    justify-content: space-evenly;
+    .login-form, .signup-form, .reset-password-form, .new-password-form{
+        @include form-styles;
+        margin-right: 150px;
+    }
+    .login-form, .signup-form, .new-password-form{
+        .password-field{
+                position: relative;
+            span{
+                position: absolute;
+                top: 15px;
+                right: 5px;
+                cursor: pointer;
+            }
         }
     }
+}
+
+.create-post-form{
+    @include form-styles;
 }
 
 .profile {
@@ -61,6 +73,7 @@
                 margin: 0 auto;
                 height: 160px;
                 img{
+                    object-fit: cover;
                     width: 160px;
                     height: 160px;
                     border-radius: 80px;
@@ -93,15 +106,17 @@
             }
         }
     }
-    .profile-gallery {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        img {
-            width: 30%;
-            margin-bottom: 18px;
+    .profile-gallery{
+        div{
+            height: 183.33px;
+            padding: 0.75rem 0.75rem;
+            img{
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
         }
-    }
+    } 
 }
 
 .home {
@@ -124,6 +139,7 @@
         }
     }
     .side-image{
+        object-fit: cover;
         width: 40px;
         height: 40px;
         border-radius: 50%;
