scroll effect and remove body field

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap');
 
+html{
+    scroll-behavior: smooth;
+}
+
 #navbar {
     nav {
         padding: 0 100px;
