--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -38,7 +38,7 @@ html{
     h6 {
         margin: 30px;
     }
-  }
+}
 
 .form-main-container{
     display: flex;
@@ -194,4 +194,9 @@ html{
     right: 0;
     bottom: 0;
     margin: auto;
+}
+
+.error-page{
+    margin: 100px auto;
+    text-align: center;
 }
