--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -200,3 +200,32 @@ html{
     margin: 100px auto;
     text-align: center;
 }
+
+.meme-container{
+    margin: 50px auto;
+    .left-box{
+        padding: 30px;
+        .caption{
+            margin-bottom: 0 !important;
+            input[type=text]{
+                border-bottom: 1px solid #9e9e9e;
+            }
+            input[type=text]:focus {
+                border-bottom: 1px solid #64b5f6;
+            }
+            label{
+                color: lightgray;
+                &.active{
+                    color: lightgray !important;
+                }
+            }
+        }
+        .middle-btn{
+            margin: 0 10px;
+        }
+    }
+    .right-box{
+        padding: 30px 100px;
+    }
+    
+}
