make mobile responsive

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,186 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap');
+@import './components/Navbar/Navbar.scss';
+@import './components/screen/Login/Login.scss';
+@import './components/screen/Signup/Signup.scss';
+@import './components/screen/ResetPass/ResetPass.scss';
+@import './components/screen/Home/Home.scss';
+@import './components/screen/CreatePost/CreatePost.scss';
+@import './components/screen/MemeGenerator/MemeGenerator.scss';
+@import './components/screen/NewPass/NewPass.scss';
+@import './components/screen/Profile/Profile.scss';
 
 html{
     scroll-behavior: smooth;
-}
-
-#navbar {
-    nav {
-        padding: 0 100px;
-        background: none;
-    }
-    a {
-        color : black !important;
-    }
-    .brand-logo {
-        font-family: 'Grand Hotel', cursive;
-    }
-}
-
-@mixin form-styles {
-    h2 {
-        font-family: 'Grand Hotel', cursive;
-    }
-    .card  {
-        padding: 20px;
-        text-align: center;
-        max-width: 400px;
-        margin: 80px auto;
-    }
-    .input-field input[type=text]:focus {
-        border-bottom: 1px solid #64b5f6;
-        box-shadow: 0 1px 0 0  #64b5f6;
-    }
-    .input-field input[type=password]:focus {
-        border-bottom: 1px solid #64b5f6;
-        box-shadow: 0 1px 0 0  #64b5f6;
-    }
-    h6 {
-        margin: 30px;
-    }
-}
-
-.form-main-container{
-    display: flex;
-    justify-content: space-evenly;
-    .login-form, .signup-form, .reset-password-form, .new-password-form{
-        @include form-styles;
-        margin-right: 150px;
-    }
-    .login-form, .signup-form, .new-password-form{
-        .password-field{
-                position: relative;
-            span{
-                position: absolute;
-                top: 15px;
-                right: 5px;
-                cursor: pointer;
-            }
-        }
-    }
-}
-
-.create-post-form{
-    @include form-styles;
-}
-
-.profile {
-    .main-profile-container {
-        max-width: 550px;
-        margin: 0px auto;
-    }
-    .profile-head{
-        .pic-container{
-            position: relative;
-            display: flex;
-            .pic{
-                margin: 0 auto;
-                height: 160px;
-                img{
-                    object-fit: cover;
-                    width: 160px;
-                    height: 160px;
-                    border-radius: 80px;
-                }
-            }
-        }
-        display: flex;
-        justify-content: space-around;
-        margin: 30px 0px;
-        padding: 30px 0px;
-        border-bottom: 1px solid grey;
-    }
-    .profile-info{
-        h4{
-            font-weight: 100;
-            font-size: 2.5em;
-        }
-        h6{
-            color: #878585;
-        }
-        .profile-sub-details{
-            display: flex;
-            justify-content: space-between;
-            width: 108%;
-            h5{
-                font-size: 1.5em;
-                span{
-                    font-weight: 500;
-                }
-            }
-        }
-    }
-    .profile-gallery{
-        div{
-            height: 183.33px;
-            padding: 0.75rem 0.75rem;
-            img{
-                object-fit: cover;
-                width: 100%;
-                height: 100%;
-            }
-        }
-    } 
-}
-
-.home {
-    .card {
-        max-width: 500px;
-        height: max-content;
-        margin: 26px auto;
-        .heart-icon {
-            color : #ef5350 !important;
-        }
-        .main-head{
-            padding: 17px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            .profile-link{
-                display: flex;
-                align-items: center;
-                h5{
-                    margin: 0;
-                    margin-left: 10px;
-                    font-size: 1.2em;
-                }
-                .side-image{
-                    object-fit: cover;
-                    width: 40px;
-                    height: 40px;
-                    border-radius: 50%;
-                }
-            }
-            a{
-                color: black;
-            }
-        }
-        .card-content{
-            input{
-                border: none;
-                border-top: 1px solid #d6d4d4;
-                &:focus{
-                    box-shadow: none !important;
-                    border-bottom: none !important;
-                }
-            }
-            .comment-box{
-                margin: 15px 0;
-                p span{
-                    font-size: 1.3em;
-                    font-weight: 500;
-                    margin-right: 10px;
-                }
-                a{
-                    color: black;
-                }
-            }
-        }
-    }
-    .pagination{
-        text-align: center;
-        margin-bottom: 100px;
-    }
 }
 
 .material-icons:hover  {
@@ -201,31 +31,4 @@ html{
     text-align: center;
 }
 
-.meme-container{
-    margin: 50px auto;
-    .left-box{
-        padding: 30px;
-        .caption{
-            margin-bottom: 0 !important;
-            input[type=text]{
-                border-bottom: 1px solid #9e9e9e;
-            }
-            input[type=text]:focus {
-                border-bottom: 1px solid #64b5f6;
-            }
-            label{
-                color: lightgray;
-                &.active{
-                    color: lightgray !important;
-                }
-            }
-        }
-        .middle-btn{
-            margin: 0 10px;
-        }
-    }
-    .right-box{
-        padding: 30px 100px;
-    }
-    
-}
+
