--- a/client/src/components/screen/Login/Login.scss
+++ b/client/src/components/screen/Login/Login.scss
@@ -41,5 +41,15 @@
     }
     .login-form{
         margin-right: 0 !important;
+        .card{
+            h2{
+                font-size: 2.5rem;
+                margin: 8px 0;
+            }
+            margin: 40px 40px !important;
+            h6{
+                font-size: 0.9rem;
+            }
+        }
     }
 }
