--- a/client/src/components/screen/Signup/Signup.scss
+++ b/client/src/components/screen/Signup/Signup.scss
@@ -41,5 +41,19 @@
     }
     .signup-form{
         margin-right: 0 !important;
+        .card{
+            h2{
+                font-size: 2.5rem;
+                margin: 8px 0;
+            }
+            margin: 40px 40px !important;
+            h6{
+                font-size: 0.9rem;
+            }
+            .file-field .btn{
+                font-size: 9px;
+                padding: 0 9px;
+            }
+        }
     }
 }
