home screen responsive

--- a/client/src/components/screen/Home/Home.scss
+++ b/client/src/components/screen/Home/Home.scss
@@ -61,7 +61,7 @@
 @media (max-width: 576px){
     .home{
         .card{
-            max-width: 300px;
+            margin: 0;
             .main-head{
                 padding: 8px;
             }
