--- a/client/src/components/screen/ResetPass/ResetPass.scss
+++ b/client/src/components/screen/ResetPass/ResetPass.scss
@@ -8,7 +8,7 @@
         .card  {
             padding: 70px 20px;
             text-align: center;
-            width: 400px;
+            max-width: 400px;
             margin: 80px auto;
         }
         .input-field input[type=text]:focus {
@@ -33,7 +33,13 @@
     .reset-password-form{
         margin-right: 0 !important;
         .card{
-            max-width: 350px !important;
+            min-width: 305px;
+            padding: 50px 20px !important;
+            margin: 40px 40px !important;
+            h2{
+                font-size: 2.5rem;
+                margin: 8px 0 !important;
+            }
         }
     }
 }
