--- a/client/src/components/screen/ResetPass/ResetPass.scss
+++ b/client/src/components/screen/ResetPass/ResetPass.scss
@@ -8,7 +8,7 @@
         .card  {
             padding: 70px 20px;
             text-align: center;
-            max-width: 400px;
+            width: 400px;
             margin: 80px auto;
         }
         .input-field input[type=text]:focus {
@@ -26,14 +26,14 @@
     }
 }
 
-@media (max-width: 576px){
+@media (max-width: 768px){
     .logo{
         display: none;
     }
     .reset-password-form{
         margin-right: 0 !important;
         .card{
-            min-width: 305px;
+            width: 70vw !important;
             padding: 50px 20px !important;
             margin: 40px 40px !important;
             h2{
